remove default value

--- a/server/form.html
+++ b/server/form.html
@@ -26,8 +26,8 @@
 
     <div id="content">
       <form action="#">
-        <br>First name:<br /><input type="text" value="Mickey">
-        <br>Last name:<br /><input type="text" name="lastname" value="Mouse"><br><br>
+        <br>First name:<br /><input type="text" >
+        <br>Last name:<br /><input type="text" name="lastname" ><br><br>
           <div>
             <p>Please select your preferred contact method:</p>
               <input type="radio" id="contactChoice1"
