--- a/server/index.html
+++ b/server/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <div class="header-img">
-  	<img class="img-responsive" src="argen_image.png" height="200" width="1598" alt="">
+  	<img class="img-responsive" src="argen_image.png" height="200" width="1598" alt="" id="argimage">
   </div>
 <div id="page">
 		<div id="logo">
@@ -31,9 +31,9 @@
 		</div>
 		<div id="nav">
 			<ul>
-        <li><a href="#" onclick="changeSobre()">Home</a></li>
-        <li><a href="#" onclick="changeQuienes()">About</a></li>
-        <li><a href="form.html">Formulario</a></li>
+        <li><a href="#" onclick="changeSobre()" id="homelink">Home</a></li>
+        <li><a href="#" onclick="changeQuienes()" id="aboutlink">About</a></li>
+        <li><a href="form.html" id="formlink">Formulario</a></li>
 			</ul>
 		</div>
 		<div id="content">
