--- a/server/form.html
+++ b/server/form.html
@@ -7,6 +7,12 @@
 	<meta name="description" content="Pagina de prueba para el workshop de Argentesting 2017" />
 	<link rel="stylesheet" href="style.css" type="text/css" />
 
+  <script>
+  function clickButton(){
+    document.getElementById("register").text = "You have been registered!";
+  }
+  </script>
+
 </head>
 <body>
 
@@ -19,15 +25,15 @@
 		</div>
 		<div id="nav">
 			<ul>
-				<li><a href="index.html">Home</a></li>
-        <li><a href="#">Formulario</a></li>
+        <li><a href="index" id="homelink">Home</a></li>
+        <li><a href="#"  id="formlink">Formulario</a></li>
 			</ul>
 		</div>
 
     <div id="content">
-      <form action="#">
-        <br>First name:<br /><input type="text" >
-        <br>Last name:<br /><input type="text" name="lastname" ><br><br>
+      <!-- <form action="#"> -->
+        <br>First name:<br /><input type="text" id="firstname" >
+        <br>Last name:<br /><input type="text"  id="lastname"><br><br>
           <div>
             <p>Please select your preferred contact method:</p>
               <input type="radio" id="contactChoice1"
@@ -43,7 +49,11 @@
               <label for="contactChoice3">Mail</label>
             </div>
           <p/>
-        <input type="submit" value="Submit">
+        <button type="button" onclick="clickButton()" id="mbutton">Click Me!</button>
+
+        <br/><br/>
+        <a id="register"></a>
+        <!-- <input type="submit" value="Submit"> -->
       </form>
    </div>
 		<div id="footer">
